[gd_scene load_steps=6 format=2]

[ext_resource path="res://simpleTheme.tres" type="Theme" id=1]
[ext_resource path="res://CardSummary.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/theme/alegreya-sans.medium.ttf"

[sub_resource type="DynamicFont" id=2]
size = 14
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 14
use_filter = true
font_data = SubResource( 1 )

[node name="Node2D" type="Button"]
margin_right = 125.0
margin_bottom = 36.0
disabled = true
shortcut_in_tooltip = false
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ -60.0 ]
}

[node name="BaseRect" type="ColorRect" parent="."]
margin_right = 127.0
margin_bottom = 38.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 125.0
margin_bottom = 36.0

[node name="text_question" type="Label" parent="."]
margin_left = 2.0
margin_top = 8.0
margin_right = 125.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "QuestionText"
valign = 1
clip_text = true

[node name="sprite_ans" type="Sprite" parent="."]
position = Vector2( 150, 19 )
scale = Vector2( 0.09, 0.09 )

[node name="ZoomButton" type="Button" parent="."]
margin_right = 127.0
margin_bottom = 38.0
theme = ExtResource( 1 )
shortcut_in_tooltip = false
flat = true

[node name="Mouseover" type="Node2D" parent="."]
visible = false
position = Vector2( 129, 4 )
z_index = 1
__meta__ = {
"_edit_group_": true
}

[node name="MarginContainer" type="MarginContainer" parent="Mouseover"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Mouseover/MarginContainer"]
margin_right = 200.0
margin_bottom = 43.0
color = Color( 0.882353, 0.882353, 0.882353, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Mouseover/MarginContainer"]
margin_right = 200.0
margin_bottom = 43.0
rect_min_size = Vector2( 200, 0 )

[node name="Label2" type="Label" parent="Mouseover/MarginContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Longer form of question for mouseover"
autowrap = true

[node name="ColorRect3" type="ColorRect" parent="Mouseover/MarginContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 200.0
margin_bottom = 43.0

[connection signal="mouse_entered" from="." to="." method="_on_Node2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Node2D_mouse_exited"]
[connection signal="button_up" from="ZoomButton" to="." method="_on_ZoomButton_button_up"]
[connection signal="mouse_entered" from="ZoomButton" to="." method="_on_ZoomButton_mouse_entered"]
[connection signal="mouse_exited" from="ZoomButton" to="." method="_on_ZoomButton_mouse_exited"]
